tests/fixtures/invalid/bytes_noexist_method.py
print(b"123".noexist_method())